# rmanptcsop

./: BUILDING.html  CHANGES  CMakeLists.txt  COPYING  COPYING.html  README  index.html  pages.html
config/cmake/: Find3Delight.cmake  FindHoudini.cmake  FindPRMan.cmake
config/docs/: doxygen.cfg  user_guide.doxy
share/: rmanPtc.txt
src/: GR_rmanPtc.cpp  GR_rmanPtc.h  SOP_rmanPtc.cpp  SOP_rmanPtc.h  rmanPtcDetail.cpp  rmanPtcDetail.h
